--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap">
     <title>ETTRAN777 Directory</title>
 </head>
 <body>
     <nav id="navbar">
         <ul>
-            <li><a href="#top">Home</a></li>
+            <li class=""><a href="#top">Home</a></li>
             <li><a href="#sites">Sites</a></li>
         </ul>
     </nav>
@@ -17,11 +18,12 @@
     <header id="hero">
         <div class="hero-content">
             <h1>Hey, I'm ETTRAN777</h1>
-            <p>Information and Computer Scientist • Game Developer • Full-Stack Developer • Database Practitioner</p>
+            <p>Welcome to my GitHub Directory</p>
         </div>
     </header>
 
     <section id="sites">
+        <p class="description">This directory contains links to all my GitHub websites, the sites are not interconnected, but you can get to all of them through here.</p>
          <div class="sectionHeader">
             <div class="sectionBegin"></div>
             <h2>Sites</h2>
@@ -32,7 +34,7 @@
             <h3>Portfolio</h3>
             <p>Go to my portfolio</p>
             <a href="https://ettran777.github.io/portfolio/" target="_blank">
-                <p class="resume-btn">Go to Portfolio &rarr;</p>
+                <p class="resume-btn">Go to site &rarr;</p>
             </a>
         </div>
 
@@ -40,7 +42,7 @@
             <h3>UMD Campus Pantry</h3>
             <p>Go to UMD Campus Pantry</p>
             <a href="https://ettran777.github.io/UMDCampusPantry/" target="_blank">
-                <p class="resume-btn">Go to UMD Campus Pantry &rarr;</p>
+                <p class="resume-btn">Go to site &rarr;</p>
             </a>
         </div>
 
@@ -48,7 +50,7 @@
             <h3>UMD Club Gymnastics</h3>
             <p>Go to UMD Club Gymnastics</p>
             <a href="https://mdclubgymnastics.github.io/mdclubgymnasticswebsite/" target="_blank">
-                <p class="resume-btn">Go to UMD Club Gymnastics &rarr;</p>
+                <p class="resume-btn">Go to site &rarr;</p>
             </a>
         </div>
 
